--- a/06.09.md
+++ b/06.09.md
@@ -22,9 +22,15 @@ HAVING COUNT(DISTINCT product_key) = (SELECT COUNT(*) FROM Product);
 
 ### 1211
 ```sql
-SELECT customer_id
-FROM Customer
-GROUP BY customer_id
-HAVING COUNT(DISTINCT product_key) = (SELECT COUNT(*) FROM Product);
+SELECT 
+    query_name,
+    ROUND(AVG(rating * 1.0 / position), 2) AS quality,
+    ROUND(SUM(CASE WHEN rating < 3 THEN 1 ELSE 0 END) * 100.0 / COUNT(*), 2) AS poor_query_percentage
+FROM 
+    Queries
+WHERE 
+    query_name IS NOT NULL
+GROUP BY 
+    query_name;
 ```
 -> https://leetcode.com/problems/queries-quality-and-percentage/submissions/1761017545
